--- a/pom.xml
+++ b/pom.xml
@@ -61,11 +61,12 @@
 			<artifactId>commons-io</artifactId>
 			<version>${commons-io}</version>
 		</dependency>
-		<dependency>
-			<groupId>org.zkoss.theme</groupId>
-			<artifactId>theme-pack</artifactId>
-			<version>8.5.0</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.zkoss.theme</groupId>-->
+			<!--<artifactId>theme-pack</artifactId>-->
+			<!--<version>8.5.0</version>-->
+			<!--<optional>true</optional>-->
+		<!--</dependency>-->
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
