--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.zkoss</groupId>
 	<artifactId>zk-mvvm</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>8.5.1.2-Eval</version>
 	<properties>
-		<zk.version>8.5.1.2-Eval</zk.version>
 		<commons-io>2.4</commons-io>
 		<maven.build.timestamp.format>yyyy-MM-dd</maven.build.timestamp.format>
 		<packname>-${project.version}-FL-${maven.build.timestamp}</packname>
@@ -49,24 +48,24 @@
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zkmax</artifactId>
-			<version>${zk.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zuti</artifactId>
-			<version>${zk.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>${commons-io}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<!--<dependency>-->
-			<!--<groupId>org.zkoss.theme</groupId>-->
-			<!--<artifactId>theme-pack</artifactId>-->
-			<!--<version>8.5.0</version>-->
-			<!--<optional>true</optional>-->
+			<!--<groupId>commons-io</groupId>-->
+			<!--<artifactId>commons-io</artifactId>-->
+			<!--<version>${commons-io}</version>-->
 		<!--</dependency>-->
+		<dependency>
+			<groupId>org.zkoss.theme</groupId>
+			<artifactId>theme-pack</artifactId>
+			<version>8.5.0</version>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${project.artifactId}</finalName>
